--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.0.2",
     "bootstrap-dark-5": "^1.1.3",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
